Apply ad flicker fix to leaderboard

--- a/sass/modules/_ad.scss
+++ b/sass/modules/_ad.scss
@@ -13,7 +13,6 @@
   width: 300px;
 }
 
-
 .ad {
   /*@include container();*/
 
@@ -73,6 +72,12 @@
     text-align: center;
     width: 100%;
     max-width: $article-max-width;
+
+    & [id^=placement_] img {
+      width: 728px;
+      height: 90px;
+    }
+
   }
 
   &:before {
